schema/testdata/errors/attribute_on_invalid_subscriber_arg.keel
model Account {
    fields {
        name Text
    }

    actions {
        create createAccount() with (name)
    }

    //expect-error:5:8:AttributeArgumentError:@on requires two arguments - an array of action types and a subscriber name
    @on([create])

    @on(
        [create],
        //expect-error:9:12:AttributeArgumentError:@on subscriber argument must be a valid function name
        123
    )

    @on(
        [create],
        //expect-error:9:21:AttributeArgumentError:@on subscriber argument must be a valid function name
        verify.Email
    )

    @on(
        [create],
        //expect-error:9:20:AttributeArgumentError:a valid function name must be in lower camel case
        VerifyEmail
    )

    @on(
        [create],
        verifyEmail,
        //expect-error:9:13:AttributeArgumentError:@on only takes two arguments
        nope
    )

    @on(
        [create],
        //expect-error:9:22:AttributeArgumentError:@on subscriber argument must be a valid function name
        [verifyEmail]
    )

    @on(
        [create],
        //expect-error:9:21:AttributeArgumentError:a valid function name must be in lower camel case
        verify_Email
    )
}
